# O-T-FLY-Novel-Reasoning-Model-ARC-Competition-2025-

./: .gitignore  ARC_TESTING_README.md  Links and info QRC 2025.txt  NOVEL_REASONING_README.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  arc_test_runner.py  config.py  config_example.py  demo_novel_reasoning.py  pyproject.toml  requirements_novel_reasoning.txt  test_novel_reasoning.py
src/arcft/: augment.py  dataset.py  jsonl.py  novel_reasoning.py  prompts.py
src/arcft/scripts/: augment_dataset.py  create_finetune_job.py  evaluate_model.py  novel_reasoning_cli.py  prepare_finetune_jsonl.py
